# sdl_flappy

./: .gitignore  CMakeLists.txt  sdl_flappy.files
src/: bird.h  main.c  pipes.h  texture.h
